--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,17 +7,22 @@ trigger:
 - main
 
 pool:
-  vmImage: 'ubuntu-latest'
-
-variables:
-  imageName: 'web-app-image'
-  dockerfilePath: 'Users/lukerobinson/Downloads/AzureDevOps/Web-App-DevOps-Project/dockerfile/Dockerfile'
+  vmImage: ubuntu-latest
 
 steps:
 - task: Docker@2
-  displayName: 'Build Docker Image'
   inputs:
-    containerRegistry: 'devops-project-docker-sc'  # Update with your Docker registry service connection
-    repository: $(imageName)
-    command: 'build'
-    Dockerfile: $(dockerfilePath)
+    containerRegistry: 'devops-project-docker-sc'  # Your service connection name
+    repository: 'lukerobinson98/web-app-image'  # Your Docker Hub repository
+    command: 'buildAndPush'
+    Dockerfile: '**/dockerfile'  # Path to your Dockerfile in GitHub repo
+    tags: 'v1'  # Tag for the image
+
+- task: kubernetesManifest@1
+  inputs: 
+    action: 'deploy'
+    connectionType: 'azureResourceManager'
+    azureSubscriptionConnection: 'aks-service-connection'
+    azureResourceGroup: 'networking-resource-group'
+    kubernetesCluster: 'terraform-aks-cluster'
+    manifests: 'application-manifest.yaml'
