Update Azure DevOps pipeline configuration

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
 steps:
 - task: Docker@2
   inputs:
-    containerRegistry: 'devops-project-docker-sc'  # Your service connection name
+    containerRegistry: 'Docker Hub'  # Your service connection name
     repository: 'lukerobinson98/web-app-image'  # Your Docker Hub repository
     command: 'buildAndPush'
     Dockerfile: '**/dockerfile'  # Path to your Dockerfile in GitHub repo
@@ -22,7 +22,7 @@ steps:
   inputs: 
     action: 'deploy'
     connectionType: 'azureResourceManager'
-    azureSubscriptionConnection: 'aks-service-connection'
+    azureSubscriptionConnection: 'devops-project-docker-sc'
     azureResourceGroup: 'networking-resource-group'
     kubernetesCluster: 'terraform-aks-cluster'
     manifests: 'application-manifest.yaml'
