Update Azure DevOps pipeline configuration

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ steps:
   inputs: 
     action: 'deploy'
     connectionType: 'azureResourceManager'
+    azureSubscriptionEndpoint: 'Docker Hub'
     azureSubscriptionConnection: 'aks-service-connection'
     azureResourceGroup: 'networking-resource-group'
     kubernetesCluster: 'terraform-aks-cluster'
