--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
     Dockerfile: '**/dockerfile'  # Path to your Dockerfile in GitHub repo
     tags: 'v1'  # Tag for the image
 
-- task: kubernetesManifest@1
+- task: KubernetesManifest@1
   inputs: 
     action: 'deploy'
     connectionType: 'azureResourceManager'
